Fix table overflow bug

--- a/app/style.css
+++ b/app/style.css
@@ -23,9 +23,6 @@ table img {
 .input-group-addon {
 	cursor: pointer;
 }
-.capitalize {
-	text-transform: capitalize; /*首字母大写*/
-}
 #download {
 	user-select: none;
 }
